--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-web": "~0.19.13",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
