--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cattip",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,18 +11,23 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.2.1",
     "expo": "~52.0.25",
+    "expo-constants": "~17.0.8",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-web-hover": "^0.2.9",
